--- a/templates/minkolang/main.html
+++ b/templates/minkolang/main.html
@@ -18,7 +18,7 @@
 		
 		<h3 style="float:right; text-align: right; margin-right:3px; margin-top:0px;">Starman<br/>Innovations</h3>
 	
-		<h1>Official Minkolang Online Interpreter - version 0.11</h1>
+		<h1>Official Minkolang Online Interpreter - version 0.14</h1>
 		
 		<p><strong>Examples:</strong> <select id="examples-dropdown">
 			<option selected disabled>------------</option>
@@ -86,6 +86,8 @@
 		<p>Loops:</p>
 		<div id="loops-table">
 		</div>
+		
+		<p id="register-text">Register: <code>0</code></p>
 		
 		<div id="array-table">
 		</div>
