--- a/templates/minkolang/main.html
+++ b/templates/minkolang/main.html
@@ -18,7 +18,7 @@
 		
 		<h3 style="float:right; text-align: right; margin-right:3px; margin-top:0px;">Starman<br/>Innovations</h3>
 	
-		<h1>Official Minkolang Online Interpreter - version 0.14</h1>
+		<h1>Official Minkolang Online Interpreter - version 0.15</h1>
 		
 		<p><strong>Examples:</strong> <select id="examples-dropdown">
 			<option selected disabled>------------</option>
@@ -55,7 +55,7 @@
 		<!-- <p style="display:inline;"> || </p> -->
 		
 		
-		<p><a id="permalink" href="{% url 'main' %}{{permalink}}">Permalink.</a> || <span id="byte-counter"></span> bytes, <span id="char-counter"></span> chars || <span id="status-text" style="display:inline; font-weight:bold;">Status: awaiting code</span></p>
+		<p><a id="permalink" href="{% url 'minkolang:main' %}{{permalink}}">Permalink.</a> || <span id="byte-counter"></span> bytes, <span id="char-counter"></span> chars || <span id="status-text" style="display:inline; font-weight:bold;">Status: awaiting code</span></p>
 		
 		<p id="note-text">Note: <kbd>Run</kbd> is limited to 1 minute at a time and <code>Slow</code> is limited to a total of 1000 steps or 1 minute, whichever is shorter.</p>
 		
